Fix Remove widget button (should be visible only in editing mode); fix widget actions menu

--- a/client/app/pages/dashboards/dashboard.less
+++ b/client/app/pages/dashboards/dashboard.less
@@ -17,7 +17,7 @@
     overflow: visible;
   }
 
-  .preview-mode & {
+  &.preview-mode {
     .widget-menu-regular {
       display: block;
     }
